FLOE-425: Strip out template content, replace with skeleton info for FD Tool

--- a/src/layouts/default.html.handlebars
+++ b/src/layouts/default.html.handlebars
@@ -3,7 +3,7 @@
     <head>
         <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <title>{{document.title}} | Documentation Template</title>
+        <title>{{document.title}} | First Discovery Tool Documentation</title>
         <link rel="icon" type="image/png" href="{{{getRelativeUrl '/images/favico.png' document.url}}}">
 
         <link rel="stylesheet" href="{{{getRelativeUrl '/css/normalize.css' document.url}}}">
@@ -49,13 +49,13 @@
                 <!-- END markup for Preference Editor -->
 
                 <div class="small-12 column docs-template-header">
-                    <a class="docs-template-logo" href="{{{getRelativeUrl '/index.html' document.url}}}" title="Home: Documentation Template">
+                    <a class="docs-template-logo" href="{{{getRelativeUrl '/index.html' document.url}}}" title="Home: First Discovery Tool Documentation">
                         <span class="show-for-sr">
-                            <h1>Documentation Template for IDRC Projects</h1>
+                            <h1>Documentation for the First Discovery Tool</h1>
                         </span>
                         <span aria-hidden="true">
-                            <h1>Documentation Template</h1>
-                            <span class="docs-template-tagline">Example Site</span>
+                            <h1>First Discovery Tool</h1>
+                            <span class="docs-template-tagline">Documentation</span>
                         </span>
                     </a>
 
