FLOE-425: Adding the first pass at a few pages

--- a/src/layouts/default.html.handlebars
+++ b/src/layouts/default.html.handlebars
@@ -15,6 +15,7 @@
         <link rel="stylesheet" type="text/css" href="{{{getRelativeUrl '/lib/infusion/src/framework/preferences/css/PrefsEditor.css' document.url}}}" />
         <link rel="stylesheet" type="text/css" href="{{{getRelativeUrl '/lib/infusion/src/framework/preferences/css/SeparatedPanelPrefsEditor.css' document.url}}}" />
         <link rel="stylesheet" href="{{{getRelativeUrl '/css/docs-template.css' document.url}}}">
+        <link rel="stylesheet" href="{{{getRelativeUrl '/css/docs-first-discovery.css' document.url}}}">
 
         <script type="text/javascript" src="{{{getRelativeUrl '/lib/infusion/infusion-uio.js' document.url}}}"></script>
         <script type="text/javascript" src="{{{getRelativeUrl '/js/DocsCore.js' document.url}}}"></script>
