--- a/src/documents/css/docs-first-discovery.css.styl
+++ b/src/documents/css/docs-first-discovery.css.styl
@@ -5,3 +5,11 @@
 .docs-core-sidebar-expanded .docs-template-articleBody {
     width: 80%;
 }
+
+.docs-template-articleBody dl dd {
+    margin-bottom: 0;
+}
+.docs-template-articleBody dl dt {
+    font-weight: normal;
+    padding-left: 2rem;
+}
