FLOE-425: Fixes, tweaks, and content for some index files.

--- a/src/documents/css/docs-first-discovery.css.styl
+++ b/src/documents/css/docs-first-discovery.css.styl
@@ -38,6 +38,8 @@ button-focus = 0.2rem solid topics-item-color;
 link-hover-color = head-fg;
 link-hover-background = topics-item-color;
 
+/* TODO: colours for the 404 page */
+
 @import "docs-template.css.styl";
 
 /* remove default logo */
