--- a/src/layouts/404-page.html.handlebars
+++ b/src/layouts/404-page.html.handlebars
@@ -3,7 +3,7 @@
     <head>
         <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <title>{{document.title}} | Documentation Template</title>
+        <title>{{document.title}} | First Discovery Tool Documentation</title>
 
         <!-- FLUID-5639:
         github pages serves this 404 document in place of the requested missing
@@ -55,7 +55,7 @@
             <!-- END markup for Preference Editor -->
 
             <div class="small-12 column docs-template-header">
-                <a class="docs-template-logo" href="{{{getRelativeUrl '/index.html' document.url}}}" title="Documentation Template">Documentation Template</a>
+                <a class="docs-template-logo" href="{{{getRelativeUrl '/index.html' document.url}}}" title="First Discovery Tool Documentation">First Discovery Tool Documentation</a>
 
                 {{! Show the menu for mobile screens }}
                 <nav class="right show-for-small-only docs-template-nav-mobile">
@@ -105,8 +105,9 @@
         </article>
 
         <footer class="row docs-template-footer fl-inverted-color">
-            <p>Created by the <a href="http://fluidproject.org/" rel="nofollow" target="_blank">Fluid Project</a>,<br/>
-            a project of the <a href="http://idrc.ocad.ca/" rel="nofollow" target="_blank">Inclusive Design Research Centre</a> at <a href="http://www.ocadu.ca/" target="_blank">OCAD University</a>.</p>
+            <p>The First Discovery Tool was developed by the <a href="http://idrc.ocad.ca/" rel="nofollow" target="_blank">Inclusive Design Research Centre</a>,<br/>
+            through the <a href="https://wiki.fluidproject.org/display/fluid/Preferences+for+Global+Access">Preferences for Global Access</a> project,
+            funded by the US Dept. of Educations's <a href="http://www.ed.gov/category/program/national-institute-disability-and-rehabilitation-research">National Institute on Disability and Rehabilitation Research</a>.</p>
         </footer>
 
         <script type="text/javascript">
