FLOE-425: Consistent 'introductory text' for each section, with links

--- a/src/documents/css/docs-first-discovery.css.styl
+++ b/src/documents/css/docs-first-discovery.css.styl
@@ -59,15 +59,22 @@ code-block-link-color = topics-item-color;
 }
 
 /* tidy up parameter descriptions */
-.docs-template-articleBody dl {
-    dt {
-        font-weight: normal;
-        padding-left: 2rem;
+.docs-template-articleBody {
+    code {
+        font-size: 97%;
     }
-    dd {
-        margin-bottom: 0;
+
+    dl {
+        dt {
+            font-weight: normal;
+            padding-left: 2rem;
+        }
+        dd {
+            margin-bottom: 0;
+        }
     }
 }
+
 
 /* fix hover style on code snippets */
 .docs-template-articleBody code a:hover,
