FLOE-425: Consistent use of text-to-speech

--- a/src/documents/css/docs-first-discovery.css.styl
+++ b/src/documents/css/docs-first-discovery.css.styl
@@ -82,3 +82,10 @@ code-block-link-color = topics-item-color;
     color: link-hover-color;
     border: none;
 }
+
+/* reduce space between nav items */
+.docs-template-topics {
+   li {
+        padding: 0.3rem 0.2rem 0.3rem 0;
+    }
+}
