FLOE-425: Fix 404 page, some formatting in 'Adding...' tutorial

--- a/src/layouts/404-page.html.handlebars
+++ b/src/layouts/404-page.html.handlebars
@@ -21,7 +21,7 @@
         <link rel="stylesheet" type="text/css" href="/lib/infusion/src/framework/preferences/css/Enactors.css" />
         <link rel="stylesheet" type="text/css" href="/lib/infusion/src/framework/preferences/css/PrefsEditor.css" />
         <link rel="stylesheet" type="text/css" href="/lib/infusion/src/framework/preferences/css/SeparatedPanelPrefsEditor.css" />
-        <link rel="stylesheet" href="/css/docs-template.css">
+        <link rel="stylesheet" href="{{{getRelativeUrl '/css/docs-first-discovery.css' document.url}}}">
 
         <script type="text/javascript" src="/lib/infusion/infusion-uio.js"></script>
         <script type="text/javascript" src="/js/DocsCore.js"></script>
@@ -55,13 +55,13 @@
                 <!-- END markup for Preference Editor -->
 
                 <div class="small-12 column docs-template-header">
-                    <a class="docs-template-logo" href="{{{getRelativeUrl '/index.html' document.url}}}" title="Home: Documentation Template">
+                    <a class="docs-template-logo" href="{{{getRelativeUrl '/index.html' document.url}}}" title="Home: First Discovery Tool Documentation">
                         <span class="show-for-sr">
-                            <h1>Documentation Template for IDRC Projects</h1>
+                            <h1>Documentation for the First Discovery Tool</h1>
                         </span>
                         <span aria-hidden="true">
-                            <h1>Documentation Template</h1>
-                            <span class="docs-template-tagline">Example Site</span>
+                            <h1>First Discovery Tool</h1>
+                            <span class="docs-template-tagline">Documentation</span>
                         </span>
                     </a>
 
