--- a/src/documents/lang.html.md.handlebars
+++ b/src/documents/lang.html.md.handlebars
@@ -105,20 +105,7 @@ This component can be configured using the following
 
 ## Selectors
 
-One of the options that can be provided to Infusion components is a set of CSS-based
-selectors identifying where in the DOM different elements can be found. Components use a
-[DOM Binder](http://docs.fluidproject.org/infusion/development/DOMBinder.html) to access the
-named elements.
-
-The value for the `selectors` option is itself a Javascript object containing name/value pairs:
-
-```javascript
-selectors: {
-    selector1Name: "selector 1 string",
-    selector2Name: "selector 2 string",
-      ...
-}
-```
+{{>selectorsIntro}}
 
 | Selector Name | Description | Default |
 |---------------|-------------|---------|
